--- a/python/python_ml/Aggregations_ Min_ Max_and Everything In Between.ipynb
+++ b/python/python_ml/Aggregations_ Min_ Max_and Everything In Between.ipynb
@@ -97,12 +97,156 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "160 ms ± 56.4 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "1.51 ms ± 157 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit min(big_array)\n",
+    "%timeit np.min(big_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.936912483209042e-07 0.999998945641516 499603.67008438666\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(big_array.min(), big_array.max(), big_array.sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.13493277 0.45292692 0.75015697 0.21448211]\n",
+      " [0.83732921 0.85401795 0.75327932 0.98405445]\n",
+      " [0.43260114 0.99519083 0.51510354 0.85226699]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Multi dimensional aggregates\n",
+    "\n",
+    "M = np.random.random((3, 4))\n",
+    "print(M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.776342200602032"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.13493277, 0.45292692, 0.51510354, 0.21448211])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.min(axis=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.75015697, 0.98405445, 0.99519083])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.max(axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Function Name\tNaN-safe Version\tDescription\n",
+    "#np.sum\tnp.nansum\tCompute sum of elements\n",
+    "#np.prod\tnp.nanprod\tCompute product of elements\n",
+    "#np.mean\tnp.nanmean\tCompute mean of elements\n",
+    "#np.std\tnp.nanstd\tCompute standard deviation\n",
+    "#np.var\tnp.nanvar\tCompute variance\n",
+    "#np.min\tnp.nanmin\tFind minimum value\n",
+    "#np.max\tnp.nanmax\tFind maximum value\n",
+    "#np.argmin\tnp.nanargmin\tFind index of minimum value\n",
+    "#np.argmax\tnp.nanargmax\tFind index of maximum value\n",
+    "#np.median\tnp.nanmedian\tCompute median of elements\n",
+    "#np.percentile\tnp.nanpercentile\tCompute rank-based statistics of elements\n",
+    "#np.any\tN/A\tEvaluate whether any elements are true\n",
+    "#np.all\tN/A\tEvaluate whether all elements are true\n",
+    "#We will see these aggregates often throughout the rest of the book."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%timeit min(big_array)\n",
-    "%timeit np.min(big_array"
+    "import pandas as pd\n",
+    "data = pd.read_csv('data/president_heights.csv')\n",
+    "heights = np.array(data['height(cm)'])\n",
+    "print(heights)"
    ]
   },
   {
